<resources>
    <string name="app_name">JustJava</string>
    <string name="name">name</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="chocolate">chocolate</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="order">order</string>
    <string name="toppings">toppings</string>
</resources>