<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/album_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <TextView
            style="@style/HeaderTextStyle"
            android:padding="16dp"
            android:text="@string/toppings" />


        <CheckBox
            android:id="@+id/notify_me_checkbox"
            style="@style/HeaderTextStyle"
            android:text="@string/whipped_cream"
            android:layout_marginStart="16dp"
            android:lineSpacingExtra="24dp"
            android:paddingStart="24dp"
            tools:ignore="RtlSymmetry"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp" />

        <CheckBox
            android:id="@+id/notify_me_chocolate"
            style="@style/HeaderTextStyle"
            android:text="@string/chocolate"
            android:layout_marginStart="16dp"
            android:lineSpacingExtra="24dp"
            android:paddingStart="24dp"
            tools:ignore="RtlSymmetry"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp" />
        <TextView
            style="@style/HeaderTextStyle"
            android:padding="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textColor="#000000"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/HeaderTextStyle"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/_0"
                tools:ignore="RtlSymmetry" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:text="@string/price"
             android:textAllCaps="true"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/price_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
             android:paddingBottom="16dp"
             android:text="@string/$0"
             android:textColor="#000000"
             android:textSize="16sp"
             tools:ignore="RtlSymmetry" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp" />

    </LinearLayout></ScrollView>